--- a/README.rdoc
+++ b/README.rdoc
@@ -13,10 +13,10 @@ http://dev.mysql.com/get/Downloads/Connector-C/mysql-connector-c-noinstall-6.0.2
 
 Placse the mysqllib.dll into your Ruby193/bin folder
 
--- Install:
-	do a bundle install
-	bundle exec rake db:create (might just work with rake db:create)
-     rake db:migrate
+-- Run the following commands in git:
+bundle install
+rakedb:create (might just work with rake db:create)
+rake db:migrate
 
 And you should be up and running, make sure you  create yourself an account via localhost:3000/sign_up/
 
